--- a/style.css
+++ b/style.css
@@ -2,4 +2,13 @@ body{
    color:pink;
    background: black;
 
+   margin: 0px;
+}
+
+header {
+border: solid 2px rgb(153, 54, 219);
+
+  padding: 20px;
+  font-size: 32px;
+  color:aqua
 }
