--- a/style.css
+++ b/style.css
@@ -12,3 +12,13 @@ border: solid 2px rgb(153, 54, 219);
   font-size: 32px;
   color:aqua
 }
+section{
+  background:rgb(153, 54, 219);
+  padding-bottom: 80px;
+  padding-top: 80px;
+  display: flex;
+  justify-content: center;
+}
+.chamada-texto{
+  margin-right: 5%
+}
