--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 }
 
 header {
-border: solid 2px rgb(153, 54, 219);
+border-bottom: solid 2px rgb(153, 54, 219);
 
   padding: 20px;
   font-size: 32px;
