--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ border-bottom: solid 2px rgb(153, 54, 219);
   font-size: 32px;
   color:aqua
 }
-section{
+.chamada{
   background:rgb(153, 54, 219);
   padding-bottom: 80px;
   padding-top: 80px;
@@ -43,4 +43,9 @@ img{
 categoria-videos{
   display:flex;
   overflow-x: auto;
+  gap: 10px;
+}
+.categoria{
+  padding-left: 20px;
+  padding-right: 20px;
 }
